title on tablet was fixed

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -26,7 +26,7 @@
   }
 
   &__title {
-    margin-top: 200px;
+    margin-top: 20vh;
 
     font-size: 40px;
     font-weight: bold;
@@ -44,7 +44,7 @@
 
     @include onDesktop {
       margin-top: 10vh;
-      
+
       font-size: 80px;
       line-height: 80px;
     }
